# ataxx-zero-ai

./: .gitignore  AGENTS.md  Ataxx_Zero_Colab.ipynb  Ataxx_Zero_Kaggle.ipynb  CLAUDE.md  HANDOFF.md  README.md  kernel-metadata.json  main.py  pyproject.toml  pyrefly.toml  test_integration.py  train.py  train_improved.py
checkpoints/: league_ratings.json
docs/: MODELS.md  glosario_ia.md
kaggle/: README.md  v10_config.json  v11_config.json  v12_config.json
kaggle_logs/: output.html
scripts/: build_master_csv.py  build_powerbi_pages.py  check_onnx_parity.py  check_python_max_lines.py  compare_checkpoints.py  curate_training_data.py  eval_all_checkpoints.py  eval_checkpoint_vs_heuristic.py  export_model_onnx.py  fetch_hf_buffers.py  fetch_hf_run.py  fetch_run_history.py  list_models.py  play_pygame.py  round_robin.py  simulate_powerquery.py  validate_powerbi.py  view_run_metrics.py  watch_replay.py
tests/: test_action_space.py  test_agents_heuristic_epsilon.py  test_agents_registry.py  test_agents_selector.py  test_board_rules.py  test_board_serialization.py  test_data_curation.py  test_dataset_numerics.py  test_engine_mcts_top_n.py  test_fetch_hf_run.py  test_game_constants_consistency.py  test_inference_checkpoint_duel_runtime.py  test_inference_checkpoint_league_runtime.py  test_inference_service.py  test_mcts_numerics.py  test_model_checkpoint_compat.py  test_model_numerics.py  test_model_registry.py  test_model_transformer.py  test_replay_buffer_numerics.py  test_replay_recorder.py  test_replay_viewer.py  test_run_dashboard.py  test_symmetry.py  test_tournament_state.py  test_train_improved_compat.py  test_training_absolute_gate_runtime.py  test_training_bootstrap.py  test_training_checkpointing.py  test_training_config_runtime.py  (+15 more)
(+194 files in other folders)
