[project]
name = "ataxx-zero-ai"
version = "0.1.0"
description = "AlphaZero-style engine for Ataxx: model, MCTS, self-play, training, inference, agents, local arena."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pytorch-lightning>=2.6.1",
    "torch>=2.10.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.repo_policy]
max_python_file_lines = 500

[tool.ruff.lint]
ignore = [
  "E501",
]
select = [
  "E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "N", "ANN", "S", "PTH",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Scripts ad-hoc: CLIs, generadores PBIR, validadores. Relajamos annotations
# de tipo y convenciones que solo pesan en código de librería.
"scripts/*.py" = ["ANN001", "ANN201", "ANN202", "ANN204", "ANN401", "S603", "S607", "SIM105", "RUF013", "B007", "RUF003", "PTH123", "PTH118", "PTH113", "PTH107", "S202", "B904", "E702", "S110", "E741", "BLE001"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
train = [
    "huggingface-hub>=1.4.1",
    "tensorboard>=2.20.0",
]
ui = [
    "pygame>=2.6.1",
]
export = [
    "onnx>=1.19.1",
    "onnxscript>=0.5.4",
]
inference = [
    # onnxruntime 1.24+ dropped Python 3.10 wheels; pin while we stay on 3.10.
    "onnxruntime>=1.22.1,<1.24",
    "huggingface-hub>=1.4.1",
]
